--- a/segundo-semestre/PROG-I/atividade4/.project
+++ b/segundo-semestre/PROG-I/atividade4/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>exerciciosProg1</name>
+	<name>Acampamento</name>
 	<comment></comment>
 	<projects>
 	</projects>
