--- a/segundo-semestre/PROG-I/atividade5/.project
+++ b/segundo-semestre/PROG-I/atividade5/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>atividade4-prog1</name>
+	<name>exerci-heranca</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1666570885574</id>
+			<id>1666570885591</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
