--- a/segundo-semestre/PROG-I/trabalho-final-maven/pom.xml
+++ b/segundo-semestre/PROG-I/trabalho-final-maven/pom.xml
@@ -5,11 +5,25 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.5.7.Final</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-entitymanager</artifactId>
+			<version>5.5.7.Final</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.xerial</groupId>
 			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.40.1.0</version>
+			<version>3.34.0</version>
 		</dependency>
+
 	</dependencies>
 
 </project>
