--- a/terceiro-semestre/prog-II/projeto-crud/crud_pessoa/pom.xml
+++ b/terceiro-semestre/prog-II/projeto-crud/crud_pessoa/pom.xml
@@ -64,6 +64,12 @@
 			<version>8.0</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-core</artifactId>
+    <version>5.5.7.Final</version>
+</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
